--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -38,7 +38,7 @@ h4ks 2024
 
 {% for location in locations %}
 <br><span style="float:left; color: {{ location.color }}">{{ location.name }}</span>
-<div id="{{ location.id }}" style="float:left"></div>
+<div id="{{ location.id }}" style="float:right"></div>
 {% endfor %}
 
 </body>
