--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -36,7 +36,7 @@ function checkTime(i) {
 h4ks 2024
 <br>
 
-<div style="float:left">
+<div style="width:20%; float:left">
 {% for location in locations %}
 <br><span style="float:left; color: {{ location.color }}">{{ location.name }}</span>
 <div id="{{ location.id }}" style="float:right"></div>
