--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -30,13 +30,13 @@ function checkTime(i) {
 }
 </script>
 
-<div style="float:right">
+<div style="float:left">
 
 <div id="txt01" style="float:right"></div>
 h4ks 2024
 <br>
 
-<div style="width:20%; float:left">
+<div style="float:left">
 {% for location in locations %}
 <br><span style="float:left; color: {{ location.color }}">{{ location.name }}</span>
 <div id="{{ location.id }}" style="float:right"></div>
