projects and locations

--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -44,7 +44,7 @@ h4ks 2024
 </div>
 
 {% for app in apps %}
-{{ app.name }}
+<br><a href="{{ app.location }}">{{ app.name }}</a>
 {% endfor %}
 
 </body>
