--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -42,7 +42,7 @@ h4ks 2024
 </div>
 </div>
 
-<div style="float:left">
+<div style="padding: 10px; border: 5px solid gray; margin: 20px; float:left">
 {% for app in apps %}
 <br><a href="{{ app.location }}">{{ app.name }}</a>
 {% endfor %}
