--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -48,7 +48,7 @@ h4ks 2024
 {% endfor %}
 </div>
 
-<img src="{% static 'webapp/img/term.jpg' %}" alt="sowhat" width="20%">
+<img src="{% static 'webapp/img/term.jpg' %}" style="padding: 10px; border: 5px solid gray; margin: 20px; float:left" alt="sowhat" width="20%">
 
 </body>
 </html>
