--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -49,6 +49,8 @@ h4ks 2024
 </div>
 
 <img src="{% static 'webapp/img/term.jpg' %}" style="padding: 10px; border: 5px solid gray; margin: 20px; float:left" alt="sowhat" width="20%">
+<img src="{% static 'webapp/img/term.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%">
+<img src="{% static 'webapp/img/term.jpg' %}" style="padding: 10px; border: 5px solid yellow; margin: 50px; float:left" alt="sowhat" width="5%">
 
 </body>
 </html>
