--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -1,7 +1,8 @@
 {% load static %}
 <html>
 <head><title>h4ks</title></head>
-<body onload="startTime()">
+
+<body onload="startTime()" style="background-color: #B2FFFF;">
 <script>
 function startTime() {
   const today = new Date();
