--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -49,9 +49,9 @@ h4ks 2024
 {% endfor %}
 </div>
 
-<img src="{% static 'webapp/img/term0.jpg' %}" style="padding: 10px; border: 5px solid gray; margin: 20px; float:left" alt="sowhat" width="20%">
-<img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%">
-<img src="{% static 'webapp/img/term2.jpg' %}" style="padding: 10px; border: 5px solid yellow; margin: 50px; float:left" alt="sowhat" width="5%">
+<a href="{% static 'webapp/img/term0.jpg' %}"><img src="{% static 'webapp/img/term0.jpg' %}" style="padding: 10px; border: 5px solid gray; margin: 20px; float:left" alt="sowhat" width="20%"></a>
+<a href="{% static 'webapp/img/term0.jpg' %}"><img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%"></a>
+<a href="{% static 'webapp/img/term0.jpg' %}"><img src="{% static 'webapp/img/term2.jpg' %}" style="padding: 10px; border: 5px solid yellow; margin: 50px; float:left" alt="sowhat" width="5%"></a>
 
 </body>
 </html>
