--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>h4ks</title></head>
 
-<body onload="startTime()" style="background-color: #B2FFFF;">
+<body onload="startTime()" style="background-color: #808000;">
 <script>
 function startTime() {
   const today = new Date();
