--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -33,6 +33,8 @@ function checkTime(i) {
 
 <div id="txt01" style="float:right"></div>
 h4ks 2024
+<br>It is {% now "jS F Y H:i" %}
+<br>It is {% now "SHORT_DATETIME_FORMAT" %}
 <br>
 
 <div style="float:left">
