--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -32,9 +32,8 @@ function checkTime(i) {
 <div style="float:left">
 
 <div id="txt01" style="float:right"></div>
-h4ks 2024
-<br>It is {% now "jS F Y H:i" %}
-<br>It is {% now "SHORT_DATETIME_FORMAT" %}
+h4ks
+<br>server time: {% now "d M Y H:i:s.u" %}
 <br>
 
 <div style="float:left">
