--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -32,8 +32,7 @@ function checkTime(i) {
 <div style="float:left">
 
 <div id="txt01" style="float:right"></div>
-h4ks
-<br>server time: {% now "d M Y H:i:s.u" %}
+h4ks server time: {% now "d M Y H:i:s.u" %}
 <br>
 
 <div style="float:left">
