--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -65,6 +65,7 @@ h4ks server time: {% now "d M Y H:i:s.u" %}
 <a href="{% static 'webapp/img/term1.jpg' %}"><img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%"></a>
 <a href="{% static 'webapp/img/term1.jpg' %}"><img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%"></a>
 <a href="{% static 'webapp/img/term1.jpg' %}"><img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%"></a>
+<a href="{% static 'webapp/img/term1.jpg' %}"><img src="{% static 'webapp/img/term1.jpg' %}" style="padding: 10px; border: 5px solid red; margin: 30px; float:left" alt="sowhat" width="10%"></a>
 
 <a href="{% static 'webapp/img/term2.jpg' %}"><img src="{% static 'webapp/img/term2.jpg' %}" style="padding: 10px; border: 5px solid yellow; margin: 50px; float:left" alt="sowhat" width="5%"></a>
 <a href="{% static 'webapp/img/term2.jpg' %}"><img src="{% static 'webapp/img/term2.jpg' %}" style="padding: 10px; border: 5px solid yellow; margin: 50px; float:left" alt="sowhat" width="5%"></a>
