--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -54,7 +54,7 @@ body {
 		font-family: monospace;
 		}
 </style>
-<h1 style="text-align: center;">Welcome to the h4ks.com</h1>
+<h1 style="text-align: center;">Welcome to h4ks.com</h1>
 <p style="font-size: 1.5em; text-align: center;">Server Time:<br><strong>{% now "d M Y H:i:s" %}</strong></p>
 <div style="display: flex; flex-wrap: wrap; justify-content: center;">
 {% for app in apps %}
