--- a/interface/webapp/templates/index.html
+++ b/interface/webapp/templates/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body onload="setInterval(startTime,1000)">
+<body onload="startTime()">
 <script>
 const options = { day: '2-digit', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false };
 function startTime() {
